Changes in version 0.11
=======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Issue 83: Changed manual page headings to include a "kyua" prefix in
  their name.  This prevents some possible confusion when displaying,
  for example, the "kyua-test" manual page with a plain name of "test".

* Issue 102: Set TMPDIR to the test case's work directory when running
  the test case.  If the test case happens to use the mktemp(3) family
  of functions (due to misunderstandings on how Kyua works or due to
  the reuse of legacy test code), we don't want it to easily escape the
  automanaged work directory.

* Issue 105: Use tmpfs instead of md as a temporary file system for
  tests in FreeBSD so that we do not leak md(4) devices.

* Issue 109: Properly drop group privileges when unprivileged_user is
  set.  Also fixes testers/run_test:fork_wait__unprivileged_group.

* Issue 110: Changed 'help' to display version information and clarified
  the purpose of the 'about' command in its documentation.

* Issue 111: Fixed crash when defining a test program in a Kyuafile that
  has not yet specified the test suite name.


Changes in version 0.10
=======================

Experimental version released on August 14th, 2014.

* Merged 'kyua-cli' and 'kyua-testers' into a single 'kyua' package.

* Dropped the 'kyua-atf-compat' package.

* Issue 100: Do not try to drop privileges to unprivileged_user when we
  are already running as an unprivileged user.  Doing so is not possible
  and thus causes spurious test failures when the current user is not
  root and the current user and unprivileged_user do not match.

* Issue 79: Mention kyua.conf(5) in the "see also" section of kyua(1).

* Issue 75: Change the rewrite__expected_signal__bad_arg test in
  testers/atf_result_test to use a different signal value.  This is to
  prevent triggering a core dump that made the test fail in some platforms.


Changes in kyua-cli version 0.9
===============================
