@@ -39,15 +39,22 @@ dnl
 dnl Checks whether getcwd(NULL, 0) works; i.e. if getcwd(3) can dynamically
 dnl allocate the output buffer to fit the whole current path.
 AC_DEFUN([KYUA_FS_GETCWD_DYN], [
-    AC_MSG_CHECKING([whether getcwd(NULL, 0) works])
-    AC_RUN_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
-#include <unistd.h>],
-        [char *cwd = getcwd(NULL, 0);
-         return (cwd != NULL) ? EXIT_SUCCESS : EXIT_FAILURE;])],
-        [AC_MSG_RESULT(yes)
-         AC_DEFINE([HAVE_GETCWD_DYN], [1],
-                   [Define to 1 if getcwd(NULL, 0) works])],
-        [AC_MSG_RESULT(no)])
+    AC_CACHE_CHECK(
+        [whether getcwd(NULL, 0) works],
+        [kyua_cv_getcwd_dyn], [
+        AC_RUN_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
+#include <unistd.h>
+], [
+    char *cwd = getcwd(NULL, 0);
+    return (cwd != NULL) ? EXIT_SUCCESS : EXIT_FAILURE;
+])],
+        [kyua_cv_getcwd_dyn=yes],
+        [kyua_cv_getcwd_dyn=no])
+    ])
+    if test "${kyua_cv_getcwd_dyn}" = yes; then
+        AC_DEFINE_UNQUOTED([HAVE_GETCWD_DYN], [1],
+                           [Define to 1 if getcwd(NULL, 0) works])
+    fi
 ])
 
 
